# codex-desktop-linux

./: CHANGELOG.md  Cargo.toml  Done.md  README.md  flake.nix  install.sh
.github/workflows/: upstream-build-app.yml
computer-use-linux/: Cargo.toml
computer-use-linux/src/: atspi_tree.rs  server.rs
docs/: troubleshooting.md
launcher/: start.sh.template  webview-cache.py  webview-cache.test.py
linux-features/: features.json
linux-features/appshots/: patch.js
linux-features/authenticated-proxy/: patch.js  test.js
linux-features/composer-dictation/: README.md  feature.json  patch.js  test.js
linux-features/conversation-mode/: patch.js  test.js
linux-features/farfield-bridge/: README.md  feature.json  patch.js  test.js  verify-build.js
linux-features/multi-auth-thread-status/: README.md  feature.json  main-process.js  patch.js  prelaunch-guard.sh  routing.js  test.js  webview.js
linux-features/omarchy-theme/: README.md  install-template.sh  test.js
linux-features/open-target-discovery/: patch.js  test.js
linux-features/record-and-replay/: feature.json  patch.js  test.js
linux-features/remote-control-ui/: patch.js  test.js
linux-features/remote-mobile-control/: README.md  patch.js  test.js
linux-features/ui-tweaks/: README.md  feature.json  patch.js  test.js
linux-features/unified-provider-history/: README.md  feature.json  patch.js  test.js
nix/native-modules/: package-lock.json
scripts/: bootstrap-wizard.sh  patch-linux-window-ui.js  patch-linux-window-ui.test.js  rebuild-candidate.sh
tests/: scripts_smoke.sh
updater/src/: app.rs  (+3 more)
(+42 files in other folders)
